--- a/html/video.html
+++ b/html/video.html
@@ -375,7 +375,7 @@ try{var Ec=parseInt(Bc.localStorage.getItem("PSO_EXP0"),10);Dc=isNaN(Ec)?null:Ec
 
                 <a href="articles/unpublished.html" title="Kyle Pearson green wood spoon art">
                     <span class="image-tint">
-                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" srcset="https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg 370w, https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg 290w, https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg 690w, https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg 768w, https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg 570w, https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg 770w, https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg 1050w" sizes="(max-width: 370px) 100vw, 370px" />                    </span>
+                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/17501259/1bf91846-5dab-11e6-8600-0f90019836c4.jpg" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" />                    </span>
                 </a>
 
                 <a href="#" class="load-media-content" data-postid="43599" data-metakey="add_video_url"></a><div class="media-content"></div>
@@ -435,7 +435,7 @@ try{var Ec=parseInt(Bc.localStorage.getItem("PSO_EXP0"),10);Dc=isNaN(Ec)?null:Ec
 
                 <a href="https://www.youtube.com/watch?v=4yoG9eB_WBM" title="Behind Young Pioneer: the first all international team to participate in the Little 500">
                     <span class="image-tint">
-                        <img width="370" height="176" src="https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" srcset="https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg 370w, https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg 290w, https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg 690w, https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg 768w, https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg 570w, https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg 770w, https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg 1050w" sizes="(max-width: 370px) 100vw, 370px" />                    </span>
+                        <img width="370" height="176" src="https://s3.amazonaws.com/media.ids/62519_spquals_web_12o.jpg" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" />                    </span>
                 </a>
 
                 <a href="#" class="load-media-content" data-postid="43599" data-metakey="add_video_url"></a><div class="media-content"></div>
@@ -495,7 +495,7 @@ try{var Ec=parseInt(Bc.localStorage.getItem("PSO_EXP0"),10);Dc=isNaN(Ec)?null:Ec
 
                 <a href="https://www.youtube.com/watch?v=RybQ5SXiU4Y" title="Behind Indiana State's 2015 Golden Glove Champion">
                     <span class="image-tint">
-                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" srcset="https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG 370w, https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG 290w, https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG 690w, https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG 768w, https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG 570w, https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG 770w, https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG 1050w" sizes="(max-width: 370px) 100vw, 370px" />                    </span>
+                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/18009063/06754394-6b81-11e6-95ca-0811f1e050f1.JPG" class="attachment-masonry-size size-masonry-size wp-post-image" alt=""  />                    </span>
                 </a>
 
                 <a href="#" class="load-media-content" data-postid="43599" data-metakey="add_video_url"></a><div class="media-content"></div>
