--- a/html/hobbyphotography.html
+++ b/html/hobbyphotography.html
@@ -375,7 +375,7 @@ try{var Ec=parseInt(Bc.localStorage.getItem("PSO_EXP0"),10);Dc=isNaN(Ec)?null:Ec
 
                 <a href="articles/music.html" title="Live music - Bloomington">
                     <span class="image-tint">
-                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" srcset="https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg 370w, https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg 290w, https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg 690w, https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg 768w, https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg 570w, https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg 770w, https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg 1050w" sizes="(max-width: 370px) 100vw, 370px" />                    </span>
+                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/17464878/c182569c-5cb6-11e6-9137-8712324f9e55.jpg" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" />                    </span>
                 </a>
 
                 
@@ -432,7 +432,7 @@ try{var Ec=parseInt(Bc.localStorage.getItem("PSO_EXP0"),10);Dc=isNaN(Ec)?null:Ec
 
                 <a href="articles/btownboxing.html" title="Amatuer Boxing - Bloomington">
                     <span class="image-tint">
-                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" srcset="https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG 370w, https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG 290w, https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG 690w, https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG 768w, https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG 570w, https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG 770w, https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG 1050w" sizes="(max-width: 370px) 100vw, 370px" />                    </span>
+                        <img width="370" height="176" src="https://cloud.githubusercontent.com/assets/16601271/17501806/577ed496-5db0-11e6-96de-2d464a596732.JPG" class="attachment-masonry-size size-masonry-size wp-post-image" alt="" />                    </span>
                 </a>
 
                 
